new gradle and structure